--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password: Hbk2017qqw.
+  password: my@Newpassw0rd
   host: localhost
   socket: /var/run/mysqld/mysqld.sock
 development:
