--- a/config/database.yml
+++ b/config/database.yml
@@ -2,8 +2,8 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: root
-  password: Hbk2017qqw.
+  username: 
+  password: 
   host: localhost
   socket: /var/run/mysqld/mysqld.sock
 development:
